--- a/reports/muse_report/acl2014.bib
+++ b/reports/muse_report/acl2014.bib
@@ -27,3 +27,12 @@
   journal={arXiv preprint arXiv:1701.07875},
   year={2017}
 }
+
+@misc{muserepomine,
+  author = {Mishra, Dhruv},
+  title = {MUSE},
+  year = {2018},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/theconsummate/MUSE/}}
+}
