--- a/reports/muse_report/acl2014.bib
+++ b/reports/muse_report/acl2014.bib
@@ -12,6 +12,13 @@
   year={2017}
 }
 
+@article{bojanowski2016enriching,
+  title={Enriching Word Vectors with Subword Information},
+  author={Bojanowski, Piotr and Grave, Edouard and Joulin, Armand and Mikolov, Tomas},
+  journal={arXiv preprint arXiv:1607.04606},
+  year={2016}
+}
+
 @misc{muserepo,
   author = {Facebook, Inc.},
   title = {MUSE},
