adding author details

--- a/reports/wordembedding/acl2014.tex
+++ b/reports/wordembedding/acl2014.tex
@@ -29,11 +29,11 @@
 % in the camera-ready version and ask you to change it back.
 
 
-\title{Translation invariant Word Embeddings}
+\title{Translation Invariant Word Embeddings}
 
-\author{First Author \\
-  Affiliation / Address line 1 \\
-  {\tt email@domain}}
+\author{Dhruv Mishra \\
+IMS, University of Stuttgart \\
+  {\tt st154709@stud.uni-stuttgart.de}}
 
 \date{}
 
