--- a/reports/muse_report/acl2014.tex
+++ b/reports/muse_report/acl2014.tex
@@ -29,11 +29,11 @@
 % in the camera-ready version and ask you to change it back.
 
 
-\title{MUSE: Multilingual Unsupervised or Supervised word Embeddings}
+\title{MUSE: Multilingual Unsupervised or Supervised Word Embeddings}
 
-\author{First Author \\
-  Affiliation / Address line 1 \\
-  {\tt email@domain}}
+\author{Dhruv Mishra \\
+IMS, University of Stuttgart \\
+  {\tt st154709@stud.uni-stuttgart.de}}
 
 \date{}
 
