--- a/reports/seminar/report.tex
+++ b/reports/seminar/report.tex
@@ -34,9 +34,22 @@
 
 \vspace{+10mm}
 \section{Introduction}
-This report explores the database of complaints filed by residents of New York City since 2010 via 311 calls. This report considers a small subset (about 250 MB+) of the full data as of 2015. The data can be downloaded from \cite{subset}. The full dataset is available at the NYC open data portal\cite{nycdatafull}.
+This report explores a small subset (about 250 MB+, as of 2015) of the database of complaints filed by residents of New York City since 2010 via 311 calls. The data considered in this report can be downloaded from \cite{subset}. The full dataset is available at the NYC open data portal \cite{nycdatafull}.
 
+\subsection{Columns in this dataset}
+The complete dataset has 41 columns but the subset considers only 6 of those columns, as described in \cite{nycdatafull}:
+\begin{itemize}
+    \item Created Date: Date and Time when the complaint was created.
+    \item Closed Date: Date and Time when the complaint was closed by responding agency.
+    \item Agency: Acronym of responding City Government Agency.
+    \item Complaint Type: This is the first level of a hierarchy identifying the topic of the incident or condition. Complaint Type may have a corresponding Descriptor or may stand alone.
+    \item Descriptor: This is associated to the Complaint Type, and provides further detail on the incident or condition. Descriptor values are dependent on the Complaint Type, and are not always required in complaint.
+    \item City: City of the incident location provided by geovalidation.
+\end{itemize}
+
+\subsection{Preview of the data}
 The top 5 rows of the database look like:
+
 \begin{center}
  \begin{tabular}{||p{3cm} p{3cm} p{1cm} p{3cm} p{3cm} p{1.5cm}||}
  \hline
@@ -55,8 +68,10 @@ The top 5 rows of the database look like:
 \end{tabular}
 \end{center}
 
+It is interesting to note that there are a couple of None values in the data which will have to be filtered out.
+
 \section{Analysis}
-\subsection{What are the top 25 most common type of complaints?}
+\subsection{What are the top 25 most common type of complaints?}  \label{top25}
 \begin{verbatim}
 SELECT ComplaintType as type, COUNT(*) AS freq
     FROM data
@@ -69,7 +84,7 @@ SELECT ComplaintType as type, COUNT(*) AS freq
 
 Heat/Hot Water comes out as the most common type of complaint.
 
-\subsection{Top 10 cities with the largest number of complaints?}
+\subsection{Top 10 cities with the largest number of complaints?}  \label{top10cities}
 Let's select the top 10 cities which have recorded the maximum number of complaints. As there are some rows which have None in the City, it is necessary to filter them out.
 \begin{verbatim}
 SELECT City AS name, COUNT(*) AS freq
@@ -101,6 +116,17 @@ Corona  & 15740 \\ [1ex]
 \end{center}
 
 \subsection{What the number of complaints by type and by city for the top 7 cities?}
+The first step is to get the complaints by type and city for only the top 7 cities.
+\begin{verbatim}
+SELECT ComplaintType as complaint_type, City as city_name,
+    COUNT(*) AS complaint_count
+    FROM data
+    WHERE city_name IN ('"BROOKLYN", "NEW YORK", "BRONX",
+    "STATEN ISLAND", "Jamaica", "Flushing", "ASTORIA"')
+    GROUP BY complaint_type, city_name
+\end{verbatim}
+
+Now, merging the output of the above query with the result of section \ref{top25} by doing a left join, we get the distribution of the top complaint types in the top 7 cities.
 
 \includegraphics[scale=0.3]{topcomplaintsfortop7cities}
 
@@ -141,22 +167,20 @@ SELECT strftime ('%H', CreatedDate) AS hour, COUNT(*) as count
 
 \includegraphics[scale=0.3]{noisecomplaintsbyhour}
 
-function \cite{nycdatafull}.
+As can be expected, noise complaints are recorded during the late night hours when people are most likely trying to sleep.
+
+\subsection{Timeseries for top 5 complaints}
+The next figure is a line chart to showing the fraction of complaints (y-axis) associated with each hour of the day (x-axis), with each complaint type shown as a differently colored line. Only the top 5 complaints are showed and complaints with a zero-timestamp have been excluded.
+
+\includegraphics[scale=0.2]{timeseries}
+
+As can be expected, Illegal Parking and Blocked Driveway complaints peak in the morning around 5 am and Street Conditions peak a little bit later around 7 am. New Yorkers are surely early risers!
+
+Heat/Hot Water complaints remain fairly constant throughout the day. The number of such complaints also suggests that most hot water complaints are recorded with a zero timestamp as these were the most common type of complaints as seen in section \ref{top25}
 
 
 % Bibliography:
 \begin{thebibliography}{9}
-\bibitem{latexcompanion}
-Michel Goossens, Frank Mittelbach, and Alexander Samarin.
-\textit{The \LaTeX\ Companion}.
-Addison-Wesley, Reading, Massachusetts, 1993.
-
-\bibitem{einstein}
-Albert Einstein.
-\textit{Zur Elektrodynamik bewegter K{\"o}rper}. (German)
-[\textit{On the electrodynamics of moving bodies}].
-Annalen der Physik, 322(10):891–921, 1905.
-
 \bibitem{nycdatafull}
 NYC Open Data
 \\\texttt{https://nycopendata.socrata.com/Social-Services/311-Service-Requests\\-from-2010-to-Present/erm2-nwe9}
