--- a/reports/seminar/report.tex
+++ b/reports/seminar/report.tex
@@ -208,13 +208,17 @@ NYC Open Data
 \\\texttt{https://nycopendata.socrata.com/Social-Services/311-Service-Requests\\-from-2010-to-Present/erm2-nwe9}
 
 
+\bibitem{subset}
+NYC Open Data Subset used in this report
+\\\texttt{https://onedrive.live.com/download?cid=FD520DDC6BE92730\&resid\\=FD520DDC6BE92730\%21616\&authkey=AEeP\_4E1uh-vyDE}
+
 \bibitem{plotly}
 Big data analytics using python and sqlite on NYC's 311 complaints since 2003.
 \\\texttt{https://plot.ly/ipython-notebooks/big-data-\\analytics-with-pandas-and-sqlite/}
 
-\bibitem{subset}
-NYC Open Data
-\\\texttt{https://onedrive.live.com/download?cid=FD520DDC6BE92730\&resid\\=FD520DDC6BE92730\%21616\&authkey=AEeP\_4E1uh-vyDE}
+\bibitem{online}
+Open online course in python
+\\\texttt{https://www.edx.org/course/introduction-to-computing\\-for-data-analysis-2}
 
 
 \end{thebibliography}
