--- a/reports/seminar/poster/myposter-landscape.tex
+++ b/reports/seminar/poster/myposter-landscape.tex
@@ -102,7 +102,9 @@ The goal is to specifically analyze these three laws:
 \color{SaddleBrown} % SaddleBrown color for the introduction
 
 \section*{Introduction}
+To understand the ever-changing nature of language, a very popular way to quantify the semantic change for a particular word is to create word vector representations of the word for two different points in time and then measure the cosine distance. This method depends on the choice of model used to calculate the word representations. Since most models use co-occurrence statistics and word frequency, there is an inherent bias present in these models which challenges the ubiquity of the effect of the proposed laws of semantic change.
 
+% The test proposed is fairly simple: The laws should hold for real data but not for random data. Also, if no change in meaning occurs, the laws should not be observed.
 
 %----------------------------------------------------------------------------------------
 %	OBJECTIVES
@@ -132,13 +134,12 @@ This corpus tries to distribute the semantic meaning change uniformly across the
 \subsubsection*{ One synchronous corpus (sample)}
 Since the smallest time unit of the dataset is one year, the underlying assumption in all models of semantic change is that no meaning change happens within a single year. Therefore the 10 million 5-grams were randomly subsampled from all the 5-grams of the year 1999 and this process was repeated 30 times. Since this entire corpus comes from a single year, any changes observed in this corpus will be attributed to “noise”.
 
-% \begin{minipage}[b]{0.19\linewidth}
-%   \includegraphics[width=20cm]{logo.png} % Logo or a photo of you, adjust its dimensions here
-% \end{minipage}
+Figure ~\ref{fig:data} shows an overview of the word distribution in  genuine and shuffled corpus.
 
 \begin{center}\vspace{1cm}
   \includegraphics[width=0.8\linewidth]{image3.png}
   \captionof{figure}{\color{Green} Average and Standard Deviation of Change Scores for each Decade}
+  \label{fig:data}
 \end{center}\vspace{1cm}
 
 \subsection*{Word meaning representations} 
@@ -148,6 +149,12 @@ The words in the corpus were mathematically represented in the following ways:
   \item PPMI: Sparse square matrices of size equal to that of vocabulary size were created to store the pointwise mutual information (PPMI) scores for each decade. These scores were based on co-occurrence counts of the words.
   \item SVD: The PPMI matrix was reduced into lower dimensions by singular vector decomposition. The resulting embeddings were then aligned with the orthogonal Procrustes method.
 \end{itemize}
+
+\begin{center}\vspace{1cm}
+  \includegraphics[width=0.8\linewidth]{image2.png}
+  \captionof{figure}{\color{Green} Correlation between frequency of words and their change scores for the year 1999}
+  \label{fig:wordfreq}
+\end{center}\vspace{1cm}
  
 
 %----------------------------------------------------------------------------------------
@@ -157,35 +164,36 @@ The words in the corpus were mathematically represented in the following ways:
 \section*{Results}
 \subsection*{Testing the law of Conformity} 
 
-\begin{center}\vspace{1cm}
-  \includegraphics[width=0.8\linewidth]{image2.png}
-  \captionof{figure}{\color{Green} Correlation between frequency of words and their change scores for the year 1999}
-\end{center}\vspace{1cm}
-
 \subsubsection*{Subsample Condition} 
-The authors calculated the correlation between frequency of words and their corresponding change scores for the year 1999. Since the assumption was that there is no semantic change within a year, the correlation should be negligible. However, for the word count representation, the correlation was -0.915 while it was -0.295 and -0.793 for PPMI and SVD respectively. This is clearly in violation of the law. The authors also point out that the correlation for SVD is misleading because of the mathematical distortions carried out while reducing the dimensions. Therefore, in principle, the actual correlation must have been lesser than what was observed. However, in any case, the law of conformity is not holding up for the subsample condition.
+The authors calculated the correlation between frequency of words and their corresponding change scores for the year 1999. Since the assumption was that there is no semantic change within a year, the correlation should be negligible. However, for the word count representation, the correlation was -0.915 while it was -0.295 and -0.793 for PPMI and SVD respectively. This is clearly in violation of the law. The authors also point out that the correlation for SVD is misleading because of the mathematical distortions carried out while reducing the dimensions. Therefore, in principle, the actual correlation must have been lesser than what was observed. However, in any case, the law of conformity is not holding up for the subsample condition. Figure ~\ref{fig:wordfreq} shows the correlation for word frequencies and semantic change in a single year.
 
-\subsubsection*{Shuffle Condition} 
-Now the correlation was calculated between semantic change scores and frequency for the whole century using the shuffle corpus. In stark contrast to expectations, almost identical correlation coefficients were observed for both the original and the shuffled corpus. This tells us that the effect of frequency is not really as great as has been reported in literature.
 
 \begin{center}\vspace{1cm}
   \includegraphics[width=0.8\linewidth]{image7.png}
   \captionof{figure}{\color{Green} Genuine Data}
+  \label{fig:genuinedata}
 \end{center}\vspace{1cm}
 
 \begin{center}\vspace{1cm}
   \includegraphics[width=0.8\linewidth]{image5.png}
   \captionof{figure}{\color{Green} Shuffled Data}
+  \label{fig:shuffledata}
 \end{center}\vspace{1cm}
+
+\subsubsection*{Shuffle Condition} 
+Now the correlation was calculated between semantic change scores and frequency for the whole century using the shuffle corpus. In stark contrast to expectations, almost identical correlation coefficients were observed for both the original and the shuffled corpus. This tells us that the effect of frequency is not really as great as has been reported in literature. Figure ~\ref{fig:genuinedata} and ~\ref{fig:shuffledata} illustrate this.
+
 
 \subsection*{Testing the law of Innovation and Prototypicality}
 To test these two laws, the authors did a regression analysis with frequency and polysemy as the independent variables for the law of innovation and frequency and prototypicality for the law of prototypicality. For these models with two predictor variables, the authors compared the the $\beta$ and the explained variance for both the original and shuffled corpus.
 
 Again, contrary to expectations, not much difference was seen between the two corpus. In case of polysemy, the explained variance for PPMI+SVD representations was 68\% and 60\% for original and shuffle respectively. For PPMI representations, these numbers were 9\% and 4\% respectively. This difference is way too less and it can be concluded that the law of innovation is not very strong. The reason according to the paper is that polysemy is highly collinear with frequency and therefore does not make any strong contributions to the two variable regression model.
 
-Similarly for prototypicality for PPMI+SVD representations, the explained variance was 65\% and 60\% for the genuine and shuffle corpus respectively. For PPMI representations, these numbers were 2\% and 0\% respectively. Once again, the difference was too low and the law of prototypicality does not seem to be holding up.
+Similarly for prototypicality for PPMI+SVD representations, the explained variance was 65\% and 60\% for the genuine and shuffle corpus respectively. For PPMI representations, these numbers were 2\% and 0\% respectively.
 
-An important point to note is that the models using only PPMI representations explain very insignificant amounts of variance while this is not the case with PPMI+SVD representations. This fact implies that the model of semantic meaning change is highly dependent on the underlying word representation it uses and is not very generalizable, thereby highlighting another major drawback.
+% Once again, the difference was too low and the law of prototypicality does not seem to be holding up.
+
+% An important point to note is that the models using only PPMI representations explain very insignificant amounts of variance while this is not the case with PPMI+SVD representations. This fact implies that the model of semantic meaning change is highly dependent on the underlying word representation it uses and is not very generalizable, thereby highlighting another major drawback.
 
 %----------------------------------------------------------------------------------------
 %	CONCLUSIONS
@@ -198,7 +206,9 @@ The paper showed the failure of three laws of semantic change which had been rep
 
 The paper also showed that the output of a model of semantic change is often dependent on the word representations it is using. As was seen in subsample case of the law of conformity, different representations provided different correlation values. The authors argue that the representations using count vectors inherently introduce a dependence of word frequency, which then leads to misleading observations.
 
-The positive aspect is that the paper presented a framework for testing and evaluating the results of a model before it gets generalized. This is a very important contribution as testing is something which often gets neglected by people.
+% The positive aspect is that the paper presented a framework for testing and evaluating the results of a model before it gets generalized.
+
+% This is a very important contribution as testing is something which often gets neglected by people.
 
 \color{DarkSlateGray} % Set the color back to DarkSlateGray for the rest of the content
 
