--- a/reports/seminar/poster/myposter-landscape.tex
+++ b/reports/seminar/poster/myposter-landscape.tex
@@ -53,15 +53,14 @@
   \veryHuge \color{NavyBlue} \textbf{Outta Control: Laws of Semantic Change and Inherent Biases in Word Representation Models} \color{Black}\\ % Title
   \Huge \textit{Dubossarsky et al. (2017)}\\[1cm] % Subtitle
   \huge \textbf{John Smith \& James Smith}\\ % Author(s)
-  \huge University and Department Name\\ % University/organization
+  \huge IMS, Universität Stuttgart \\ % University/organization
 \end{minipage}
 %
 \begin{minipage}[b]{0.25\linewidth}
   \color{DarkSlateGray}\Large \textbf{Contact Information:}\\
-  Department Name\\ % Address
-  University Name\\
-  123 Broadway, State, Country\\\\
-  Phone: +1 (000) 111 1111\\ % Phone number
+  Institut für Maschinelle Sprachverarbeitung\\ % Address
+  Universität Stuttgart\\
+  Germany\\\\
   Email: \texttt{john@LaTeXTemplates.com}\\ % Email address
 \end{minipage}
 %
